Bug 490957 - Kate dont open on archlinux (XFCE)
Summary: Kate dont open on archlinux (XFCE)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 24.05.2
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-28 23:38 UTC by Joao Victor
Modified: 2024-07-29 16:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joao Victor 2024-07-28 23:38:01 UTC
SUMMARY
Kate dont open on xfce

STEPS TO REPRODUCE
1. Install kate using pacman
2. Try to open kate
3. Nothing happens

OBSERVED RESULT
dmesg shows:

[ 7942.266653] kate[5825]: segfault at 0 ip 0000745bc3e281e6 sp 00007ffcb0ad6b30 error 4 in katekonsoleplugin.so[745bc3e26000+9000] likely on CPU 5 (core 5, socket 0)
[ 7942.266675] Code: 41 5e 41 5f 5d c3 66 0f 1f 44 00 00 e8 23 fe ff ff 48 8b 7b 38 48 85 c0 74 09 48 85 ff 0f 84 b1 00 00 00 4c 8b 2d 7a bc 00 00 <48> 8b 07 ff 50 60 4c 89 ef 48 89 c6 ff 15 78 b8 00 00 49 89 c5 48

[ 8378.340957] kate[7592]: segfault at 0 ip 000074b9d01f31e6 sp 00007ffc76c556e0 error 4 in katekonsoleplugin.so[74b9d01f1000+9000] likely on CPU 4 (core 4, socket 0)
[ 8378.340977] Code: 41 5e 41 5f 5d c3 66 0f 1f 44 00 00 e8 23 fe ff ff 48 8b 7b 38 48 85 c0 74 09 48 85 ff 0f 84 b1 00 00 00 4c 8b 2d 7a bc 00 00 <48> 8b 07 ff 50 60 4c 89 ef 48 89 c6 ff 15 78 b8 00 00 49 89 c5 48

[ 8381.928922] kate[7615]: segfault at 0 ip 00007120178151e6 sp 00007ffdf66306f0 error 4 in katekonsoleplugin.so[712017813000+9000] likely on CPU 2 (core 2, socket 0)
[ 8381.928942] Code: 41 5e 41 5f 5d c3 66 0f 1f 44 00 00 e8 23 fe ff ff 48 8b 7b 38 48 85 c0 74 09 48 85 ff 0f 84 b1 00 00 00 4c 8b 2d 7a bc 00 00 <48> 8b 07 ff 50 60 4c 89 ef 48 89 c6 ff 15 78 b8 00 00 49 89 c5 48


SOFTWARE/OS VERSIONS
OS: Arch Linux x86_64
Kernel: Linux 6.9.10-zen1-1-zen
Shell: bash 5.2.26
DE: Xfce4 4.18
WM: Xfwm4 (X11)

ADDITIONAL INFORMATION
pacman -Qi kate
Name            : kate
Version         : 24.05.2-1
Description     : Advanced text editor
Architecture    : x86_64
URL             : https://apps.kde.org/kate/
Licenses        : GPL-2.0-or-later  LGPL-2.0-or-later
Groups          : kde-applications  kde-utilities
Provides        : kwrite
Depends On      : gcc-libs  glibc  kbookmarks  kcolorscheme  kcompletion  kconfig  kconfigwidgets  kcoreaddons  kcrash  kdbusaddons  kguiaddons  ki18n  kiconthemes
                  kio  knewstuff  kparts  kservice  ktexteditor  ktextwidgets  kuserfeedback  kwidgetsaddons  kwindowsystem  kxmlgui  qt6-base  syntax-highlighting
Optional Deps   : konsole: open a terminal in Kate
                  clang: C and C++ LSP support [installed]
                  python-lsp-server: Python LSP support
                  texlab: LaTeX LSP support
                  rust: Rust LSP support
                  git: git-blame plugin [installed]
Required By     : None
Optional For    : None
Conflicts With  : kwrite
Replaces        : kwrite
Installed Size  : 32.50 MiB
Packager        : Antonio Rojas <arojas@archlinux.org>
Build Date      : Tue 02 Jul 2024 02:56:23 PM -03
Install Date    : Sat 27 Jul 2024 09:45:37 PM -03
Install Reason  : Explicitly installed
Install Script  : No
Validated By    : Signature
Comment 1 Joao Victor 2024-07-29 16:09:20 UTC
Problem solved after installing konsole.
Comment 2 Christoph Cullmann 2024-07-29 16:44:24 UTC
Git commit f2a3d9428b659af04632ddc4ff9f9c28bc5e5448 by Christoph Cullmann.
Committed on 29/07/2024 at 16:44.
Pushed by cullmann into branch 'master'.

fix crash if no konsole installed

M  +2    -2    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/-/commit/f2a3d9428b659af04632ddc4ff9f9c28bc5e5448
Comment 3 Christoph Cullmann 2024-07-29 16:50:36 UTC
Git commit ec3b7b5a2fa4dac86ad32223231c385b6bf9da4f by Christoph Cullmann.
Committed on 29/07/2024 at 16:50.
Pushed by cullmann into branch 'release/24.08'.

fix crash if no konsole installed


(cherry picked from commit f2a3d9428b659af04632ddc4ff9f9c28bc5e5448)

Co-authored-by: Christoph Cullmann <christoph@cullmann.io>

M  +2    -2    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/-/commit/ec3b7b5a2fa4dac86ad32223231c385b6bf9da4f
Comment 4 Christoph Cullmann 2024-07-29 16:52:49 UTC
Thanks for reporting this, my error.