fix crash if no konsole installed

BUG: 490957


(cherry picked from commit f2a3d9428b659af04632ddc4ff9f9c28bc5e5448)

Co-authored-by: Christoph Cullmann <christoph@cullmann.io>